# vfhe1

./: .gitignore  CMakeLists.txt  arr.cpp  atcoder_ntt.cpp  build-instructions.md  build_debug_mac.sh  build_mcl_test_ops.sh  build_opt_linux.sh  build_opt_mac.sh  convolution.hpp  enc.h  enc_types.cpp  enc_types1.cpp  enc_types3.cpp  find_group.ipynb  internal_math.hpp  internal_type_traits.hpp  mcl_test_ops.cpp  modint.hpp  ntt.cpp  ntt.h  ntt.hpp  serialisation.hpp  shared.h  test_enc.cpp  test_pair1.cpp  test_print.cpp  test_serialisation_run.sh  test_vec.cpp  todos.md  vfhe.cpp  vfhe.h  vfhe_test.cpp  x25519.cpp  x25519_1.cpp
atcoder/: convolution.hpp  internal_math.hpp  internal_type_traits.hpp
old_code/: enc_types.cpp  internal_bit.hpp  poly.py  test_atcoder.cpp  test_gmp_dists.cpp  test_pairing.cpp  vfhe.cpp  vfhe.h
playground/: build_opt_ntl_mac.sh  build_opt_test_msm_mac.sh  field_and_group_utils.cpp  gen_tests_ntt.ipynb  gmp_montgomery.c  gmp_pow.cpp  mcl_bench.cpp  montmul_compare_montgomery.cpp  test_get_prime_gmp.cpp  test_gmp.cpp  test_mcl.cpp  test_mpz_to_mcl.cpp  test_msm.cpp  test_ntl.cpp  test_ntl_mcl.cpp  test_pair1.cpp  u256.cpp  x25519_2.cpp
tests/: test_serialisation.cpp
utils/: distributions.ipynb  find_group.ipynb
